--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,10 @@
   </div>
 </header>
 
-<app-mensaje></app-mensaje>
-
 <app-main-nav></app-main-nav>
+
+<app-main-banner></app-main-banner>
+
+<app-mensaje></app-mensaje>
 
 <router-outlet></router-outlet>
