--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,4 @@
-<header id="main-header">
-  <div class="container">
-    <h1>Megatienda</h1>
-    <small>Siempre con los mejores precios</small>
-  </div>
-</header>
-
+<app-main-header></app-main-header>
 <app-main-nav></app-main-nav>
-
-<app-main-banner></app-main-banner>
-
-<app-mensaje></app-mensaje>
-
 <router-outlet></router-outlet>
+<app-main-footer></app-main-footer>
