--- a/src/app/common/main-nav/main-nav.component.html
+++ b/src/app/common/main-nav/main-nav.component.html
@@ -1,17 +1,26 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" [routerLink]="['/']">Megatienda</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="#mensaje">Mensaje</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#colaboradores">Colaboradores</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/proveedores']">Proveedores</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/tienda']">Tienda</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/carrito']">Carrito</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -24,14 +33,15 @@
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      <ul class="navbar-nav mr-right">
+        <li class="nav-item">
+          <a class="nav-link" href="#"><fa-icon [icon]="faUser"></fa-icon></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><fa-icon [icon]="faSearch"></fa-icon></a>
+        </li>
+        </ul>
     </div>
     </div>
   </nav>
