--- a/src/app/inicio/home/home.component.html
+++ b/src/app/inicio/home/home.component.html
@@ -1,3 +1,4 @@
 <app-main-banner></app-main-banner>
 <app-mensaje></app-mensaje>
 <app-colaboradores></app-colaboradores>
+<app-envios></app-envios>
