--- a/src/app/common/main-nav/main-nav.component.html
+++ b/src/app/common/main-nav/main-nav.component.html
@@ -14,6 +14,9 @@
           <a class="nav-link" href="#colaboradores">Colaboradores</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/empleados']">Empleados</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['/proveedores']">Proveedores</a>
         </li>
         <li class="nav-item">
