--- a/src/app/components/tienda/tienda.component.html
+++ b/src/app/components/tienda/tienda.component.html
@@ -1,5 +1,21 @@
 <section id="tienda" class="padded">
     <div class="container">
         <h2>Tienda</h2>
+        <div class="row">
+            <div class="col-md-3">
+                <h3>Categorias</h3>
+                <ul class="list-group">
+                    <li class="list-group-item" *ngFor="let itemCategoria of listaCategorias" (click)="seleccionarCategoria(itemCategoria)" [class.active]="itemCategoria === categoriaEscogida">
+                        <h5>{{itemCategoria.nombre}}</h5>
+                        <small>{{itemCategoria.descripcion}}</small>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-9" *ngIf="categoriaEscogida">
+                <h4>{{categoriaEscogida.nombre}}</h4>
+                <p>{{categoriaEscogida.descripcion}}</p>
+                <app-productos [CategoriaX]="categoriaEscogida"></app-productos>
+            </div>
+        </div>
     </div>
 </section>
