--- a/src/app/tablas/categorias/categorias.component.html
+++ b/src/app/tablas/categorias/categorias.component.html
@@ -69,30 +69,41 @@
 <div class="modal fade" id="formulario-actualizar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
-        <form>
             <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <h5 class="modal-title" id="exampleModalLabel">Modificar</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             </div>
+        <form ngNativeValidate
+        [formGroup]="categoriasActualizarForm"
+        (ngSubmit)="actualizarCategoria(categoriasActualizarForm.value)"
+        *ngIf="categoriaActualizar">
             <div class="modal-body">
+                <div class="form-group">
+                    <input type="text" class="form-control" 
+                    formControlName="idcategoria"
+                    readonly
+                    [(ngModel)] = "categoriaActualizar.idcategoria">
+                </div>
                 <div class="form-group">
                     <input type="text" class="form-control" 
                     formControlName="nombre"
                     required minlength="4" maxlength="25" 
-                    placeholder="Nombre">
+                    placeholder="Nombre"
+                    [(ngModel)] = "categoriaActualizar.nombre">
                 </div>
                 <div class="form-group">
                     <input type="text" class="form-control" 
                     formControlName="descripcion"
                     required minlength="8" maxlength="50" 
-                    placeholder="Descripcion">
+                    placeholder="Descripcion"
+                    [(ngModel)] = "categoriaActualizar.descripcion">
                 </div>
             </div>
             <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            <button type="submit" class="btn btn-primary">Actualizar</button>
             </div>
         </form>
       </div>
